syntax = "proto3";

option go_package = "hotel_grpc/";

package hotel_grpc;

service HotelService {
   rpc GetRoomsByHotel (GetRoomsByHotelRequest) returns (GetRoomsByHotelResponse) {}
}

message GetRoomsByHotelRequest {
   int32 hotel_id = 1;
}

message RoomInfo {
   int32 id = 1;
	int32 hotel_id = 2;
	int32 price = 3;
	bool available = 4;
}

message GetRoomsByHotelResponse {
   repeated RoomInfo rooms = 1;
}
